@@ -508,81 +508,3 @@ ccss_border_draw (ccss_border_stroke_t const	*left,
 		visibility_flags, cr, x, y, width, height, false);
 }
 
-#ifdef CCSS_DEBUG
-
-void
-ccss_border_join_dump (ccss_border_join_t const *self)
-{
-	if (self->spec != CCSS_PROPERTY_SPEC_UNSET) {
-		printf ("%.1f ", self->radius);
-	}
-
-	printf (";\n");
-}
-
-void
-ccss_border_stroke_dump (ccss_border_stroke_t const *self)
-{
-/* TODO
-	if (self->width->spec != CCSS_PROPERTY_SPEC_UNSET) {
-		printf ("%.1f ", self->width->width);
-	}
-
-	if (self->style->spec != CCSS_PROPERTY_SPEC_UNSET) {
-		printf ("%s ", lookup_name (self->style->style));
-	}
-
-	ccss_color_dump (&self->color);
-
-	printf (";\n");
-*/
-}
-
-void
-ccss_border_dump (ccss_border_t const *self)
-{
-/* TODO
-	if (CCSS_BORDER_STROKE_IS_SET (self->left)) {
-		printf (CCSS_PROPERTY_DUMP_PREFIX "border-left: ");
-		ccss_border_stroke_dump (&self->left);
-	}
-
-	if (CCSS_BORDER_JOIN_IS_SET (self->left_top)) {
-		printf (CCSS_PROPERTY_DUMP_PREFIX "border-top-left-radius: ");
-		ccss_border_join_dump (&self->left_top);
-	}
-
-	if (CCSS_BORDER_STROKE_IS_SET (self->top)) {
-		printf (CCSS_PROPERTY_DUMP_PREFIX "border-top: ");
-		ccss_border_stroke_dump (&self->top);
-	}
-
-	if (CCSS_BORDER_JOIN_IS_SET (self->top_right)) {
-		printf (CCSS_PROPERTY_DUMP_PREFIX "border-top-right-radius: ");
-		ccss_border_join_dump (&self->top_right);
-	}
-
-	if (CCSS_BORDER_STROKE_IS_SET (self->right)) {
-		printf (CCSS_PROPERTY_DUMP_PREFIX "border-right: ");
-		ccss_border_stroke_dump (&self->right);
-	}
-
-	if (CCSS_BORDER_JOIN_IS_SET (self->right_bottom)) {
-		printf (CCSS_PROPERTY_DUMP_PREFIX "border-bottom-right-radius: ");
-		ccss_border_join_dump (&self->right_bottom);
-	}
-
-	if (CCSS_BORDER_STROKE_IS_SET (self->bottom)) {
-		printf (CCSS_PROPERTY_DUMP_PREFIX "border-bottom: ");
-		ccss_border_stroke_dump (&self->bottom);
-	}
-
-	if (CCSS_BORDER_JOIN_IS_SET (self->bottom_left)) {
-		printf (CCSS_PROPERTY_DUMP_PREFIX "border-bottom-left-radius: ");
-		ccss_border_join_dump (&self->bottom_left);
-	}
-*/
-}
-
-#endif /* CCSS_DEBUG */
-
